// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={false}
  onClick={[MockFunction]}
  size="small"
  type="link"
>
  <NodeFixture />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed all props 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  onClick={[MockFunction]}
  size="small"
  type="link"
>
  <NodeFixture />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed only required props 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={false}
  onClick={[MockFunction]}
  size="medium"
  type="link"
>
  <NodeFixture />
</ForwardRef>
`;
